--- a/lol.html
+++ b/lol.html
@@ -1,119 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-
-    <script>
-const MAX_TIME = 18;
-const MIN_BLOOM_TIME = 0;
-const MAX_BLOOM_TIME = 2;
-const MIN_FADE_TIME = 0;
-const MAX_FADE_TIME = 2;
-
-let currentTime = 6;
-let sunState = "Mọc";
-let birds = [];
-let flowers = [];
-
-// Tạo ngẫu nhiên số lượng hoa ban đầu
-const initialFlowerCount = Math.floor(Math.random() * 5) + 1;
-for (let i = 0; i < initialFlowerCount; i++) {
-  const color = Math.floor(Math.random() * 3);
-  flowers.push({
-    color,
-    bloomTime: 0,
-    fadeTime: 0,
-  });
+   <style>
+    body {
+  font: 13px sans-serif;
+  margin: 0;
+  overflow: hidden;
 }
 
-function updateSunState() {
-  if (currentTime === 6) {
-    sunState = "Mọc";
-  } else if (currentTime === 18) {
-    sunState = "Lặn";
-  }
+audio {
+  display: inline-block;
+  height: 40px;
+  width: 100%;
 }
 
-function updateFlowers() {
-  if (sunState === "Mọc") {
-    for (const flower of flowers) {
-      if (flower.bloomTime === 0) {
-        flower.bloomTime = Math.floor(Math.random() * (MAX_BLOOM_TIME - MIN_BLOOM_TIME + 1)) + MIN_BLOOM_TIME;
-      } else {
-        flower.bloomTime--;
-      }
-    }
-  } else if (sunState === "Lặn") {
-    for (const flower of flowers) {
-      if (flower.fadeTime === 0) {
-        flower.fadeTime = Math.floor(Math.random() * (MAX_FADE_TIME - MIN_FADE_TIME + 1)) + MIN_FADE_TIME;
-      } else {
-        flower.fadeTime--;
-        if (flower.fadeTime === 0) {
-          flowers.splice(flowers.indexOf(flower), 1);
-        }
-      }
-    }
-  }
+canvas {
+  display: block;
+  width: 100%;
 }
 
-function updateBirds() {
-  if (sunState === "Lặn") {
-    birds = [];
-  } else if (sunState === "Mọc") {
-    birds = [
-      {
-        lastFlowerColor: null,
-      },
-    ];
-  }
-
-  while (birds.length > 0) {
-    const bird = birds.pop();
-    const randomFlowerIndex = Math.floor(Math.random() * flowers.length);
-    const randomFlower = flowers[randomFlowerIndex];
-
-    if (
-      randomFlower.bloomTime > 0 &&
-      (bird.lastFlowerColor === null || bird.lastFlowerColor === randomFlower.color)
-    ) {
-      bird.lastFlowerColor = randomFlower.color;
-      flowers.splice(randomFlowerIndex, 1);
-
-      if (bird.lastFlowerColor !== null) {
-        flowers.push({
-          color: bird.lastFlowerColor,
-          bloomTime: 0,
-          fadeTime: 0,
-        });
-      }
-    }
-  }
+#container {
+  height: calc( 100vh - 40px );
+}
+#container:-webkit-full-screen {
+  height: 100vh;
 }
 
-function printState() {
-  console.log(`Thời gian: ${currentTime}`);
-  console.log(`Trạng thái mặt trời: ${sunState}`);
-  console.log(`Số lượng chim: ${birds.length}`);
-  console.log(`Số lượng hoa: ${flowers.length}`);
-  for (const flower of flowers) {
-    console.log(` - Màu hoa: ${flower.color}`);
-  }
-  console.log("---");
+#upload {
+  display: none;
 }
 
-while (currentTime <= MAX_TIME) {
-  updateSunState();
-  updateFlowers();
-  updateBirds();
-  printState();
-  currentTime++;
+.dg.main {
+  position: absolute;
+  top: 0;
+  right: 100px;
+  z-index: 9;
 }
-    </script>
+
+.dg.main ul {
+  max-height: calc( 100vh - 20px );
+  overflow-Y: auto;
+}
+
+.dg.main select {
+  font: inherit;
+}
+
+   </style>
+  <!-- analyzer container -->
+<div id="container"></div>
+
+<!-- audio element -->
+<audio id="audio" controls crossorigin></audio>
+
+<!-- file upload -->
+  <input id="upload" type="file" accept="audio/*">
+
+
+  <script>
+    /**
+ * for documentation and more demos,
+ * visit https://audiomotion.dev
+ */
+
+// load module from Skypack CDN
+import AudioMotionAnalyzer from 'https://cdn.skypack.dev/audiomotion-analyzer';
+
+// audio source
+const audioEl = document.getElementById('audio');
+
+// container
+const container = document.getElementById('container');
+
+// instantiate analyzer
+const audioMotion = new AudioMotionAnalyzer( container, {
+  source: audioEl,
+  mode: 10,
+  channelLayout: 'dual-combined',
+  fillAlpha: .3,
+  fsElement: container,
+  frequencyScale: 'bark',
+  gradientLeft: 'steelblue',
+  gradientRight: 'orangered',
+  linearAmplitude: true,
+  linearBoost: 1.8,
+  lineWidth: 1.5,
+  showPeaks: false,
+  outlineBars: true,
+  weightingFilter: 'D'
+});
+
+// file upload
+document.getElementById('upload').addEventListener( 'change', e => {
+	const fileBlob = e.target.files[0];
+
+	if ( fileBlob ) {
+		audioEl.src = URL.createObjectURL( fileBlob );
+		audioEl.play();
+	}
+});
+
+/* ======== CONTROLS (dat-gui) ======== */
+
+const gui = new dat.GUI({ autoPlace: false });
+
+const buttons = {
+//  link: () => window.parent.location = 'https://audiomotion.dev',
+  link: () => window.parent.location = 'https://github.com/hvianna/audioMotion-analyzer/tree/develop#readme',
+  loadFile: () => document.getElementById('upload').click(),
+  playStream: () => {
+    audioEl.src = 'https://icecast2.ufpel.edu.br/live';
+    audioEl.play();
+  },
+  fullscreen: () => audioMotion.toggleFullscreen(),
+}
+
+gui.add( buttons, 'loadFile' ).name('Upload audio file');
+gui.add( buttons, 'playStream' ).name('Play live stream');
+gui.add( buttons, 'fullscreen' ).name('Fullscreen');
+
+gui.add( audioMotion, 'gradient', ['classic','prism','orangered','rainbow','steelblue'] );
+
+gui.add( audioMotion, 'mode', {
+    'Discrete frequencies' : 0,
+    '1/24th octave / 240 bands' : 1,
+    '1/12th octave / 120 bands' : 2,
+    '1/8th octave / 80 bands' : 3,
+    '1/6th octave / 60 bands' : 4,
+    '1/4th octave / 40 bands' : 5,
+    '1/3rd octave / 30 bands' : 6,
+    'Half octave / 20 bands' : 7,
+    'Full octave / 10 bands' : 8,
+    'Line / Area graph' : 10    
+});
+
+const newFeaturesFolder = gui.addFolder('📢 New in version 4');
+
+newFeaturesFolder.add( audioMotion, 'ansiBands' );
+newFeaturesFolder.add( audioMotion, 'colorMode', ['bar-index','bar-level','gradient'] );
+newFeaturesFolder.add( audioMotion, 'channelLayout', ['single','dual-combined','dual-horizontal','dual-vertical'] );
+
+newFeaturesFolder.add( audioMotion, 'gradientLeft', ['classic','prism','orangered','rainbow','steelblue'] );
+newFeaturesFolder.add( audioMotion, 'gradientRight', ['classic','prism','orangered','rainbow','steelblue'] );
+
+newFeaturesFolder.add( audioMotion, 'frequencyScale', {
+  'Bark': 'bark',
+  'Linear': 'linear',
+  'Logarithmic': 'log',
+  'Mel': 'mel'
+});
+newFeaturesFolder.add( audioMotion, 'linearAmplitude' );
+newFeaturesFolder.add( audioMotion, 'linearBoost', 1, 5, .2 );
+newFeaturesFolder.add( audioMotion, 'noteLabels' );
+newFeaturesFolder.add( audioMotion, 'peakLine' );
+newFeaturesFolder.add( audioMotion, 'radius', 0, 1, .05 );
+newFeaturesFolder.add( audioMotion, 'radialInvert' );
+newFeaturesFolder.add( audioMotion, 'roundBars' );
+newFeaturesFolder.add( audioMotion, 'trueLeds' );
+newFeaturesFolder.add( audioMotion, 'weightingFilter', {
+  'none': '',
+  'A-weighting': 'A',
+  'B-weighting': 'B',
+  'C-weighting': 'C',
+  'D-weighting': 'D',
+  'ITU-R 468': '468'
+});
+  
+const bandsFolder = gui.addFolder('Bands / Graph settings');
+
+bandsFolder.add( audioMotion, 'barSpace', 0, 1, .1 );
+
+bandsFolder.add( audioMotion, 'alphaBars' );
+bandsFolder.add( audioMotion, 'ledBars' );
+bandsFolder.add( audioMotion, 'lumiBars' );
+bandsFolder.add( audioMotion, 'outlineBars' );
+bandsFolder.add( audioMotion, 'fillAlpha', 0, 1, .1 );
+bandsFolder.add( audioMotion, 'lineWidth', 0, 5, .5 );
+
+const radialFolder = gui.addFolder('Radial settings');
+
+radialFolder.add( audioMotion, 'radial' );
+radialFolder.add( audioMotion, 'spinSpeed', -5, 5, 1 );
+
+const reflexFolder = gui.addFolder('Reflex & Mirror settings');
+
+reflexFolder.add( audioMotion, 'mirror', -1, 1, 1 );
+reflexFolder.add( audioMotion, 'reflexRatio', 0, .9, .1 );
+reflexFolder.add( audioMotion, 'reflexAlpha', 0, 1, .1 );
+reflexFolder.add( audioMotion, 'reflexBright', 0, 2, .1 );
+reflexFolder.add( audioMotion, 'reflexFit' );
+
+const switchesFolder = gui.addFolder('Switches');
+
+const switches = [ 'showBgColor', 'showPeaks', 'showScaleX', 'showScaleY', 'splitGradient', 'loRes', 'showFPS' ];
+
+for ( let prop of switches )
+  switchesFolder.add( audioMotion, prop );
+
+gui.add( buttons, 'link' ).name(`v${AudioMotionAnalyzer.version}`);
+
+container.appendChild( gui.domElement );
+
+
+  </script>
 </body>
-
 </html>
